[project]
name = "gan"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.9.0",
    "bokeh>=3.8.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "nbconvert>=7.16.6",
    "pandoc>=2.4",
    "plotly>=6.3.1",
    "torch>=2.8.0",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
